--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+apt-transport-s3 (2.1.0-1roles3~noble2) noble; urgency=medium
+
+  * incorporate upstream fix for IAM roles
+  * silence deprecation warning
+
+ -- Josh Goodall <joshua@roughtrade.net>  Mon, 29 Apr 2024 22:36:45 +0000
+
 apt-transport-s3 (2.1.0-1) unstable; urgency=medium
 
   [ Marcin Kulisz ]
